@@ -1,4 +1,4 @@
-/* Copyright (C) 2002, 2003, 2005 Free Software Foundation, Inc.
+/* Copyright (C) 2002, 2003, 2005, 2006 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@redhat.com>, 2002.
 
@@ -56,4 +56,11 @@ __libc_pthread_init (ptr, reclaim, functions)
 #ifndef TLS_MULTIPLE_THREADS_IN_TCB
   return &__libc_multiple_threads;
 #endif
+}
+
+
+libc_freeres_fn (freeres_libptread)
+{
+  if (__libc_pthread_functions.ptr_freeres != NULL)
+    __libc_pthread_functions.ptr_freeres ();
 }
