@@ -1,3 +1,15 @@
+2006-08-23  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #2662]
+	* locales/bn_BD: Fix abday and day spelling of Tuesday.
+
+	[BZ #2473]
+	* locales/en_NZ: Define am/pm formats.
+
+2006-08-22  Ulrich Drepper  <drepper@redhat.com>
+
+	* locales/nn_NO: Copy more categories from nb_NO.
+
 2006-08-19  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #3034]
